<resources>
    <string name="app_name">EatMe</string>
    <string name="menuBoxSize" translatable="false">150dp</string>
    <string name="titleSize" translatable="false">40dp</string>
    <string name="landscapeMenuBoXSize" translatable="false">100dp</string>
    <string name="inventoryActivityName">Inventory</string>
    <string name="searchHintEnglish">Search Ingredients Here</string>
    <string name="inventory">Inventory</string>
    <string name="recipes">Recipes</string>
    <string name="grocery_list">Grocery List</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="langselection">Language</string>
    <string name="searchHintRecipesEnglish">Search Recipe Here</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="removeIgredients">Remove Ingredients</string>
    <string name="AddRecipe">Add Recipe</string>
    <string name="RemoveRecipe">Remove Recipe</string>
    <string name="english" translatable="false">English</string>
    <string name="nederlands" translatable="false">Nederlands</string>
    <string name="greek" translatable="false">Ελληνικα</string>
    <string name="shake" translatable="false">Shake</string>
    <string name="addAllToInventory">Add all to inventory</string>
    <string name="removeAllIνgredients">Delete Grocery list</string>
    <string name="cancel">Cancel</string>
    <string name="finish">finish</string>
    <string name="addToInventory">Add ingredients:</string>
    <string name="save">save</string>
    <string name="ingredientNeeded">Ingredients needed:</string>
    <string name="missingToShopping">Add missing to GL</string>
    <string name="removeAvailable">Remove available ingredients</string>
    <string name="addToFavorites">Add to favorites:</string>
    <string name="removeFromFavorites">Remove from favorites:</string>
    <string name="randomRecipe">Your random recipe:</string>
    <string name="tryAgain" translatable="false">Shake again!</string>
    <string name="addmore">Add More Ingredients</string>
    <string name="recipename">Recipe Name</string>
    <string name="ingredientName">Ingredient Name</string>
    <string name="amount">Amount</string>
    <string name="deleteAlert">Do you want to delete</string>
    <string name="delete">Delete</string>
    <string name="removeRecipe">Delete Recipe:</string>
    <string name="useWhatIHave">Use ingredients you have</string>
    <string name="addMissingToList">Add missing to Shopping List</string>
    <string name="have">Have:</string>
    <string name="need">Need:</string>
    <string name="editButton">Add/Remove Ingredients</string>
    <string name="done">Done</string>
    <string name="hint">If you want to add an ingredient to a recipe first type the recipe in. To add an ingredient leave recipe empty. To remove ingredient from a recipe, set amount to 0.</string>
    <string name="addNew">Add new ingredients</string>
    <string name="back">back</string>
    <string name="inputRestriction"><![CDATA[Special characters: #, *, & should not be used]]></string>
    <string name="cook">Cook/Delivery?</string>
    <string name="cooking">Cook!</string>
    <string name="delivery">Delivery!</string>
    <string name="error">Connection error!</string>

</resources>

