<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kon.demo.favoritesActivity">

    <EditText
        android:id="@+id/searchFavorites"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/searchHintRecipesEnglish"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:layout_width="205dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/addRecipe"
        android:textSize="15sp"
        android:background="@drawable/roundedblue"
        android:text="@string/AddRecipe"/>

    <Button
        android:layout_width="205dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:textSize="15sp"
        android:text="@string/RemoveRecipe"
        android:layout_toEndOf="@+id/addRecipe"
        android:id="@+id/removeRecipe"
        android:background="@drawable/roundedred" />

</RelativeLayout>
