<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/addRecipe_layout"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/AddRecipe"
        android:textColor="@color/TextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        android:textStyle="italic"
        android:text="@string/hint"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/saveRecipe"
        android:background="@drawable/rounded"
        android:gravity="center_horizontal|center_vertical"
        android:text="+"
        android:clickable="false"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:onClick="saverecipe" />

    <EditText
        android:id="@+id/addRecipeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/recipename"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        />

    <EditText
        android:id="@+id/addIngredientText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/ingredientName"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <EditText
        android:id="@+id/ingredientAmount"
        android:inputType="numberDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/amount"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/addIngredients"
        android:textColor="@color/TextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/addNextIngredient"
        android:background="@drawable/rounded"
        android:gravity="center_horizontal|center_vertical"
        android:text="+"
        android:clickable="false"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        android:onClick="saveIngredient"/>

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/newingredients"
        app:layout_constraintBottom_toTopOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/guideline5">


    </ListView>


    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/roundedblue"
        android:text="@string/done"
        android:onClick="back"/>




    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.83" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>
