<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/mainActivity"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context="kon.demo.MainActivity">


    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@color/background"
        android:id="@+id/inventoryButton"
        android:src="@drawable/inventory"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:onClick="inventoryActivity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:id="@+id/inventoryText"
        android:layout_below="@+id/inventoryButton"
        android:layout_alignEnd="@+id/inventoryButton"
        android:layout_marginEnd="45dp"
        android:textColor="@color/TextColor"
        tools:layout_editor_absoluteY="166dp"
        tools:layout_editor_absoluteX="60dp" />
    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@color/background"
        android:id="@+id/recipeButton"
        android:src="@drawable/recipe2"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_alignTop="@+id/inventoryButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:onClick="RecipesActivity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipes"
        android:id="@+id/recipeText"
        android:layout_below="@+id/recipeButton"
        android:layout_alignEnd="@+id/recipeButton"
        android:layout_marginEnd="45dp"
        android:textColor="@color/TextColor"
        tools:layout_editor_absoluteY="166dp"
        tools:layout_editor_absoluteX="60dp" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@color/background"
        android:id="@+id/shoppingButton"
        android:src="@drawable/shopping3"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_below="@+id/inventoryText"
        android:layout_alignStart="@+id/inventoryButton"
        android:layout_marginTop="33dp"
        android:onClick="GroceryActivity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grocery_list"
        android:id="@+id/shoppingText"
        android:layout_below="@+id/shoppingButton"
        android:layout_alignEnd="@+id/shoppingButton"
        android:layout_marginEnd="40dp"
        android:textColor="@color/TextColor"
        tools:layout_editor_absoluteY="166dp"
        tools:layout_editor_absoluteX="60dp" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@color/background"
        android:id="@+id/favoritesButton"
        android:src="@drawable/favorites3"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_alignTop="@+id/shoppingButton"
        android:layout_alignStart="@+id/recipeButton"
        android:onClick="FavoritesActivity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:id="@+id/favoritesText"
        android:layout_below="@+id/favoritesButton"
        android:layout_alignEnd="@+id/favoritesButton"
        android:layout_marginEnd="45dp"
        android:textColor="@color/TextColor"
        tools:layout_editor_absoluteY="166dp"
        tools:layout_editor_absoluteX="60dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@color/background"
        android:id="@+id/settingsButton"
        android:src="@drawable/settings1"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_below="@+id/favoritesText"
        android:layout_centerHorizontal="true"
        android:onClick="settingsActivity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settingsText"
        android:textColor="@color/TextColor"
        tools:layout_editor_absoluteY="166dp"
        tools:layout_editor_absoluteX="60dp"
        android:layout_below="@+id/settingsButton"
        android:layout_centerHorizontal="true"
        />





</RelativeLayout>
